...
//                        .padding(.vertical, 4)
//                    }
//                }
//
//                // MARK: Selección de fecha y hora
//                if viewModel.reservaActiva == nil {
//                    Section("Nueva reserva") {
//                        FilaFechaPicker(
//                            titulo: "Fecha",
//                            icono: "calendar",
//                            componentes: .date,
//                            fecha: $fechaInicio,
//                            filaExpandida: $filaExpandida,
...
//                        }
//                        .foregroundStyle(.blue)
//                    }
//                }
//
//            }
//            .navigationTitle("🔔 Prueba de notificaciones")
//            .animation(.easeInOut, value: viewModel.reservaActiva == nil)
//        }
//    }
//}
//
//#Preview {
...
